[Quick Order List] Prevent selected inputs being covered by total bar or header (#3278)
* Prevent input elements going under total bar or sticky header during keyboard navigation.

* Fix a typo

* Refactoring

* Increase z-index for volume pricing popup

--- a/assets/quick-order-list.css
+++ b/assets/quick-order-list.css
@@ -40,7 +40,7 @@ quick-order-list .quantity__button {
   .quick-order-list__total {
     position: sticky;
     bottom: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: rgb(var(--color-background));
   }
 
